# XMLCoder

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .spi.yml  .swiftformat  .swiftlint.yml  .travis.yml  Brewfile  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  Dangerfile.swift  LICENSE  Package.swift  README.md  XMLCoder.podspec  XMLParsing.podspec  azure-pipelines.yml  codecov.yml  docs.sh  index.html  lint.sh  pod.sh  test_linux.sh  test_swiftpm.sh  test_xcodebuild.sh
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/library-scripts/: node-debian.sh
.github/workflows/: danger.yml  documentation.yml  main.yml
Array/: index.html
Attribute/: index.html
Benchmarks/: Package.resolved  Package.swift
Benchmarks/Benchmarks/XMLCoderBenchmarks/: Benchmark.swift  XMLDecode.swift
DynamicNodeDecoding/: index.html
DynamicNodeEncoding/: index.html
Element/: index.html
ElementAndAttribute/: index.html
Sample XML/Books/: Books.swift
Sample XML/BreakfastMenu/: breakfast.swift  breakfast.xml
Sample XML/CDs/: CDCatalog.swift
Sample XML/Notes/: Notes.swift
Sample XML/Plants/: PlantCatalog.swift
Sample XML/RJI/: RJI.swift
Sources/XMLCoder/: ISO8601DateFormatter.swift  XMLKey.swift  XMLPositionIndexed.swift  XMLStackParser.swift
Sources/XMLParsing/: ISO8601DateFormatter.swift  XMLKey.swift  XMLStackParser.swift
Tests/: LinuxMain.swift
Tests/XMLCoderTests/: ArrayTest.swift  AttributedEnumIntrinsicTest.swift  AttributedIntrinsicTest.swift  BenchmarkTests.swift  BooksTest.swift  BorderTest.swift  BreakfastTest.swift  CDATAMixedUsageTest.swift  CDATATest.swift  CDCatalog.swift  CDTest.swift  CharacterDataDecodingTestCase.swift  ClassTests.swift  CombineTests.swift  CompositeChoiceTests.swift  DecodingContainerTests.swift  DecodingTestCase.swift  DictionaryTest.swift  DocTypeTests.swift  DynamicNodeDecodingTest.swift  DynamicNodeEncodingTest.swift  ElementNameTest.swift  EmptyArrayTest.swift  EmptyElementEmptyStringTests.swift  EnumAssociatedValueTestComposite.swift  EnumAssociatedValueTestSimple.swift  ErrorContextTest.swift  ErrorContextTests.swift  ErrorHandle.swift  EscapedCharactersTest.swift  IntOrString.swift  IntOrStringTest.swift  KeyDecodingAndEncodingStrategyTests.swift  KeyDecodingStrategyTest.swift  MixedChoiceAndNonChoiceTests.swift  MixedContainerTest.swift  NamespaceTest.swift  NestedAttributeChoiceTests.swift  NestedChoiceArrayTest.swift  NestedChoiceTests.swift  (+19 more)
Tests/XMLParsingTests/: XMLParsingTests.swift
XMLAttributeProtocol/: index.html
XMLChoiceCodingKey/: index.html
XMLCoder.xcodeproj/: project.pbxproj
XMLDecodableSequence/: index.html
XMLDecoder/: index.html
XMLDecoder_DataDecodingStrategy/: index.html
XMLDecoder_DateDecodingStrategy/: index.html
XMLDecoder_KeyDecodingStrategy/: index.html
XMLDecoder_NodeDecoding/: index.html
XMLDecoder_NodeDecodingStrategy/: index.html
XMLDecoder_NonConformingFloatDecodingStrategy/: index.html
XMLDocumentType/: index.html
XMLDocumentType_External/: index.html
XMLElementAndAttributeProtocol/: index.html
XMLEncoder/: index.html
XMLEncoder_DataEncodingStrategy/: index.html
XMLEncoder_DateEncodingStrategy/: index.html
XMLEncoder_KeyEncodingStrategy/: index.html
XMLEncoder_NodeEncoding/: index.html
XMLEncoder_NodeEncodingStrategy/: index.html
XMLEncoder_NonConformingFloatEncodingStrategy/: index.html
XMLEncoder_OutputFormatting/: index.html
XMLEncoder_PrettyPrintIndentation/: index.html
XMLEncoder_StringEncodingStrategy/: index.html
XMLHeader/: index.html
XMLParsing/: AppDelegate.swift  DataExtension.swift  ViewController.swift  XMLStackParser.swift
XMLParsing.xcodeproj/: project.pbxproj
XMLParsing.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
XMLParsing/Decoder/: DecodingErrorExtension.swift  XMLDecoder.swift  XMLDecodingStorage.swift  XMLKeyedDecodingContainer.swift  XMLStackParser.swift  XMLUnkeyedDecodingContainer.swift
XMLParsing/Previous Attempts/: XMLDecoderV1.swift
XMLParsing/XML/: XMLStackParser.swift
(+186 files in other folders)
