cmake_minimum_required(VERSION 3.16)

project(XMLCoder LANGUAGES Swift)

set(CMAKE_Swift_MODULE_DIRECTORY ${CMAKE_BINARY_DIR}/swift)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

if(CMAKE_SYSTEM_NAME STREQUAL Windows OR CMAKE_SYSTEM_NAME STREQUAL Darwin)
  option(BUILD_SHARED_LIBS "Build shared libraries by default" YES)
endif()

file(GLOB_RECURSE XMLCODER_SWIFT_SOURCES Sources/**.swift)

add_library(XMLCoder ${XMLCODER_SWIFT_SOURCES})

install(TARGETS XMLCoder
    ARCHIVE DESTINATION lib
    LIBRARY DESTINATION lib
    RUNTIME DESTINATION bin)

install(FILES 
  ${CMAKE_BINARY_DIR}/swift/XMLCoder.swiftdoc 
  ${CMAKE_BINARY_DIR}/swift/XMLCoder.swiftmodule
  DESTINATION swift)